// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should extract dynamic meta 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): Object {
    "authors": Array [
      Object {
        "name": "Jane Doe",
        "twitter": "@janedoe",
        "website": "janedoe.com",
      },
      Object {
        "name": "John Doe",
        "twitter": "@johndoe",
        "website": "johndoe.com",
      },
    ],
    "date": "2020-01-01",
  },
}
`;

exports[`should extract static meta 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): Object {
    "prop": "value",
  },
}
`;

exports[`should noop for any other export not named "meta" 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): Object {},
}
`;

exports[`should reset working directory when done 1`] = `undefined`;

exports[`should return build-in return value when no meta exists 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): Object {},
}
`;

exports[`should return custom return value when no meta exists 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): undefined,
}
`;
